# api_service/docs/swagger.json
@@ -234,6 +234,44 @@
                 }
             }
         },
+        "/auth/refresh": {
+            "post": {
+                "description": "Uses the refresh token to generate a new access token",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "authentication"
+                ],
+                "summary": "Refresh the access token",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Refresh token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Example: {\\\"access_token\\\":\\\"your_new_generated_token\\\", \\\"refresh_token\\\":\\\"your_refresh_token\\\"}",
+                        "schema": {
+                            "$ref": "#/definitions/http.SuccessAuthResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Example: {\\\"error\\\":\\\"Invalid refresh token\\\"}",
+                        "schema": {
+                            "$ref": "#/definitions/http.ErrorAuthResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/auth/registration": {
             "post": {
                 "description": "Register a new user with the given details",
@@ -372,8 +410,12 @@
         "http.SuccessAuthResponse": {
             "type": "object",
             "properties": {
-                "token": {
+                "access_token": {
                     "description": "The generated JWT\nin: body\nexample: \"your_generated_token\"",
+                    "type": "string"
+                },
+                "refresh_token": {
+                    "description": "The generated Refresh\nin: body\nexample: \"your_refresh_token\"",
                     "type": "string"
                 }
             }
